--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,java,eclipse
+gitfinalProject/04_filnalProject/target/m2e-wtp/web-resources/META-INF/maven/kr.or/iei/pom.properties
