--- a/gitfinalProject/04_filnalProject/pom.xml
+++ b/gitfinalProject/04_filnalProject/pom.xml
@@ -19,14 +19,14 @@
 	<dependency>
 	    <groupId>com.sun.mail</groupId>
 	    <artifactId>javax.mail</artifactId>
-	    <version>1.4.7</version>
+	    <version>1.6.2</version>
 	</dependency>
 	
 	<!-- https://mvnrepository.com/artifact/org.springframework/spring-context-support -->
 	<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-context-support</artifactId>
-	    <version>5.3.9</version>
+	    <version>5.0.6.RELEASE</version>
 	</dependency>
 
 	<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
