--- a/gitfinalProject/04_filnalProject/pom.xml
+++ b/gitfinalProject/04_filnalProject/pom.xml
@@ -15,6 +15,12 @@
 	</properties>
 	<dependencies>
 	
+	<dependency>
+		<groupId>com.googlecode.json-simple</groupId>
+		<artifactId>json-simple</artifactId>
+		<version>1.1.1</version>
+	</dependency>	
+	
 	<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
 	<dependency>
 	    <groupId>com.sun.mail</groupId>
