--- a/gitfinalProject/04_filnalProject/pom.xml
+++ b/gitfinalProject/04_filnalProject/pom.xml
@@ -16,6 +16,12 @@
 	<dependencies>
 	
 	<dependency>
+		<groupId>com.github.scribejava</groupId>
+		<artifactId>scribejava-core</artifactId>
+		<version>2.8.1</version>
+	</dependency>
+	
+	<dependency>
 		<groupId>com.googlecode.json-simple</groupId>
 		<artifactId>json-simple</artifactId>
 		<version>1.1.1</version>
