--- a/gitfinalProject/04_filnalProject/pom.xml
+++ b/gitfinalProject/04_filnalProject/pom.xml
@@ -15,6 +15,13 @@
 	</properties>
 	<dependencies>
 	
+	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+	<dependency>
+	    <groupId>org.apache.commons</groupId>
+	    <artifactId>commons-lang3</artifactId>
+	    <version>3.8</version>
+	</dependency>
+	
 	<dependency>
 		<groupId>com.github.scribejava</groupId>
 		<artifactId>scribejava-core</artifactId>
