--- a/gitfinalProject/04_filnalProject/src/main/webapp/WEB-INF/web.xml
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/WEB-INF/web.xml
@@ -37,6 +37,13 @@
 			<param-name>contextConfigLocation</param-name>
 			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
 		</init-param>
+		
+		<!-- 404 에러 처리 -->
+		<init-param>
+			<param-name>throwExceptionIfNoHandlerFound</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 		
